# bind9-lan

./: Cargo.toml  README.md  justfile
Data/: config.toml  domains.whitelisted
Data/block_files.d/: hosts_blocked.txt
Data/lists_of_lists.d/: firebog_list_of_lists.txt  list_of_lists.txt
adblock-fetch/: .gitignore  Cargo.toml  justfile
adblock-fetch/src/: cli.rs  main.rs
debian/: bind9-lan.dirs  bind9-lan.install  bind9-lan.manpages  changelog  control  copyright  rules
dns-block/: .gitignore  Cargo.toml  dns-block.md  justfile
dns-block/src/: cli.rs  dns_resolver.rs  file_config.rs  filter.rs  list_of_lists.rs  main.rs  statistics.rs  sub_domains.rs
dns-filter/: .gitignore  Cargo.toml  dns-filter.1  justfile
dns-filter/src/: cli.rs  main.rs
orgncf-generator/: Cargo.toml
orgncf-generator/src/: parser.rs
shared/: Cargo.toml
shared/src/: lib.rs  list_of_lists.rs  logging.rs  man.rs
tree-sitter-orgncf/: Cargo.toml  justfile
tree-sitter-orgncf/bindings/rust/: lib.rs
tree-sitter-orgncf/src/: parser.c
