[workspace]
members = [
    "adblock-fetch",
    "dns-block",
    "dns-filter",
    "orgncf-generator",
    "tree-sitter-orgncf",
]
resolver = "2"

[workspace.dependencies]
addr = "0.15.6"
cc = "1.2"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
fnv = "*"
futures = "0.3.31"
indoc="1.0"
log = "0.4.29"
mimalloc = "*"
rayon = "*"
regex = "1.12.2"
reqwest = "0.12.28"
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tree-sitter = "0.25.10"
tree-sitter-language = "0.1"

[profile.release]
lto = true
