[workspace]
members = [
    "adblock-fetch",
    "dns-block",
    "dns-filter",
    "orgncf-generator",
    "tree-sitter-orgncf",
]
resolver = "2"

[workspace.dependencies]
addr = "0.15.6"
cc = "1.2"
chrono = "0.4.43"
clap_mangen = "0.2.31"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
fnv = "*"
futures = "0.3.31"
indoc="2.0.7"
log = "0.4.29"
mimalloc = "*"
rayon = "*"
regex = "1.12.2"
reqwest = "0.13.1"
reqwest-middleware = "0.5.0"
reqwest-retry = "0.9.0"
roff = "0.2.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tree-sitter = "0.26.3"
tree-sitter-language = "0.1"

[profile.release]
lto = true
strip = true

