[package]
name = "adblock-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
addr = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
tokio = { workspace = true }
