[package]
name = "adblock-fetch"
version = "0.1.1"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
edition = "2024"
description = "Resolve lists of list of hosts"

[dependencies]
clap = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
shared = { path = "../shared" }

[lib]
name = "adblock_fetch_lib"
path = "src/lib.rs"

[[bin]]
name = "adblock-fetch"
path = "src/main.rs"

[[bin]]
name = "adblock-fetch-man-gen"
path = "src/bin/man_gen.rs"

