[package]
name = "dns-block"
version = "0.7.1"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
edition = "2024"
description = "Simplify the list of ad and tracking servers to block"

[dependencies]
fnv = { workspace = true }
rayon = { workspace = true }
clap= { workspace = true }
indoc= { workspace = true }
mimalloc = { workspace = true }
addr = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap_mangen = { workspace = true }
roff = { workspace = true }
chrono = { workspace = true }

[lib]
name = "dns_block_lib"
path = "src/lib.rs"

[[bin]]
name = "dns-block"
path = "src/main.rs"

[[bin]]
name = "dns-block-man-gen"
path = "src/bin/man_gen.rs"

