[package]
name = "dns-block"
version = "0.7.2"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
edition = "2024"
description = "Simplify the list of ad and tracking servers to block"

[dependencies]
fnv = { workspace = true }
rayon = { workspace = true }
clap= { workspace = true }
indoc= { workspace = true }
mimalloc = { workspace = true }
addr = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
clap_mangen = { workspace = true }
roff = { workspace = true }
chrono = { workspace = true }
shared = { path = "../shared" }

[lib]
name = "dns_block_lib"
path = "src/lib.rs"

[[bin]]
name = "dns-block"
path = "src/main.rs"

[[bin]]
name = "dns-block-man-gen"
path = "src/bin/man_gen.rs"

