[package]
name = "dns-block"
version = "0.8.0"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
edition = "2024"
description = "Simplify the list of ad and tracking servers to block"

[dependencies]
addr = { workspace = true }
clap= { workspace = true }
fnv = { workspace = true }
indoc= { workspace = true }
log = { workspace = true }
mimalloc = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
shared = { path = "../shared" }

[lib]
name = "dns_block_lib"
path = "src/lib.rs"

[[bin]]
name = "dns-block"
path = "src/main.rs"

[[bin]]
name = "dns-block-man-gen"
path = "src/bin/man_gen.rs"

