[package]
name = "orgncf-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-orgncf = { git = "https://github.com/ovidiu-ionescu/tree-sitter-orgncf", branch = "master" }

[dev-dependencies]
indoc = "2.0.7"
