[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
addr = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
num-format = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_mangen = { workspace = true }
roff = { workspace = true }

