[package]
name = "tree-sitter-orgncf"
description = "Describes into a single file how lan items should be added to DNS and DHCP"
version = "0.1.0"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
license = "AGPL3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "orgncf"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ovidiu-ionescu/bind9-lan/tree-sitter-orgncf"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
tree-sitter = { workspace = true }

